test/files/neg/t12321/B_1.scala

package bar

protected[bar] class B(x: Int)

